sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:11: error: ';' expected but '{' found.
  while (i+ecart < lgr || NbEch!=0){
                                   ^